2012-09-02  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct defect introduced by 2012-08-03 commit.

	* src/approot.c (AppPathNameW): Add omitted 'else', so that tail
	pointer isn't moved after the APPROOT prefix is truncated.

2012-09-02  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Remap Mercurial subrepository reference via local hg-git clone.

	* .hgsub (build-aux): Point to ../build-aux; this must be a locally
	hosted hg clone of the git origin repository, and it must pre-exist as
	a sibling of any created hg clone of the mingw-get repository.

2012-08-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add Mercurial subrepository reference for build-aux.

	* .hgsub: New file.

2012-08-03  Keith Marshall  <keithmarshall@users.sourceforge.net>

	More code refactoring, to facilitate GUI implementation.

	* src/clistub.c (AppPathNameW): Factor out; relocate to...
	* src/approot.c: ...this new file; it reproduces the original
	implementation, modified to also consider any "libexec" directory in
	the executable path as the first child of the APPROOT prefix.  Note
	also, that no longer terminates APPROOT with a trailing backslash.

	* src/approot.h: New file; it trivially declares the prototype for...
	(AppPathNameW): ...this relocated extern "C" function.

	* src/clistub.c (main): Adapt usage of AppPathNameW(), to reinstate
	trailing backslash on assignment to APPROOT environment variable.

	* Makefile.in (CLI_EXE_OBJECTS): New macro; define it as the original
	set of prerequisites, with the addition of approot.OBJEXT, for...
	(mingw-get.EXEEXT): ...this; use it.

	* src/rites.c: Add comment regarding APPROOT usage.

2012-08-02  Earnie Boyd  <earnie@users.sourceforge.net>

	Find missing.m4 in build-aux/m4 directory.

	* aclocal.m4: Change path  m4/missing.m4 to build-aux/m4/missing.m4.

2012-07-31  Earnie Boyd  <earnie@users.sourceforge.net>

	Add build-aux as a submodule.
	Move .cvsignore to .gitignore.

	* .gitmodules: New file.